# llm-copy-of-myself

./: .env  .env.example  .gitignore  PLAN.md  README.md  WINDOWS_TRAINING.md  bot.py  clean_telegram_export.py  config.example.yaml  config.yaml  make_dataset.py  pyproject.toml  requirements-windows-cuda.txt  requirements.txt
DataExport_2026-07-10/chats/chat_005/video_files/: sticker (1).webm  sticker (2).webm  sticker (3).webm  sticker (4).webm  sticker (5).webm  sticker.webm
DataExport_2026-07-10/chats/chat_006/contacts/: contact_1.vcard
DataExport_2026-07-10/chats/chat_006/video_files/: sticker.webm
DataExport_2026-07-10/chats/chat_008/video_files/: sticker (1).webm  sticker (2).webm  sticker (3).webm  sticker (4).webm  sticker (5).webm  sticker (6).webm  sticker (7).webm  sticker (8).webm  sticker (9).webm  sticker.webm
DataExport_2026-07-10/chats/chat_017/contacts/: contact_1.vcard
DataExport_2026-07-10/chats/chat_017/stickers/: AnimatedSticker.tgs
DataExport_2026-07-10/chats/chat_024/stickers/: AnimatedSticker.tgs
DataExport_2026-07-10/chats/chat_025/video_files/: sticker.webm
DataExport_2026-07-10/chats/chat_045/contacts/: contact_1.vcard
DataExport_2026-07-10/chats/chat_046/stickers/: AnimatedSticker.tgs
DataExport_2026-07-10/chats/chat_058/video_files/: sticker (1).webm  sticker (2).webm  sticker.webm
DataExport_2026-07-10/chats/chat_073/stickers/: AnimatedSticker.tgs
private_data/: relationships.example.json
src/personal_ai/: __init__.py  cli.py  config.py  data.py  evaluation.py  google_calendar.py  modeling.py  prompts.py  retrieval.py  supplemental.py  tokenization.py  tools.py  training.py  utils.py
tests/: helpers.py  test_bot_media.py  test_checkpoints.py  test_data_pipeline.py  test_evaluation.py  test_modeling_generation.py  test_qwen35_modules.py  test_reply_only_collator.py  test_retrieval.py  test_supplemental.py  test_tokenization.py  test_utils.py
