[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-telegram-ai"
version = "0.1.0"
description = "Local dataset, QLoRA training, evaluation, retrieval, and bot pipeline"
requires-python = ">=3.11,<3.12"
dependencies = [
  "PyYAML>=6.0,<7",
  "pydantic>=2.10,<3",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
train = [
  "accelerate>=1.2,<2",
  "bitsandbytes>=0.45,<1",
  "datasets>=3.2,<5",
  "peft>=0.14,<1",
  "safetensors>=0.5,<1",
  "transformers>=4.51,<5",
]
bot = ["aiogram>=3.20,<4"]
dev = ["pytest>=8.3,<9", "ruff>=0.9,<1"]

[project.scripts]
personal-ai = "personal_ai.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
