[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-telegram-ai"
version = "0.1.0"
description = "Local dataset, QLoRA training, private RAG, evaluation, and Telegram bot pipeline"
requires-python = ">=3.11,<3.12"
dependencies = [
  "google-api-python-client>=2.170,<3",
  "google-auth-httplib2>=0.2,<1",
  "google-auth-oauthlib>=1.2,<2",
  "Jinja2>=3.1,<4",
  "numpy>=1.26,<3",
  "PyYAML>=6.0,<7",
  "pydantic>=2.10,<3",
  "sentence-transformers>=5.1,<6",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
train = [
  "accelerate>=1.2,<2",
  "bitsandbytes>=0.45,<1",
  "datasets>=3.2,<5",
  "peft>=0.14,<1",
  "safetensors>=0.5,<1",
  "transformers @ git+https://github.com/huggingface/transformers.git@4626421dc6b741a329300682a6408246ee465490",
  "tqdm>=4.67,<5",
  "trl>=0.15,<1",
]
bot = [
  "aiogram>=3.20,<4",
  "accelerate>=1.2,<2",
  "bitsandbytes>=0.45,<1",
  "peft>=0.14,<1",
  "transformers @ git+https://github.com/huggingface/transformers.git@4626421dc6b741a329300682a6408246ee465490",
]
dev = ["pytest>=8.3,<9", "ruff>=0.9,<1"]

[project.scripts]
personal-ai = "personal_ai.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
